--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <ul>
                       <li>God frist &#128175;</li>
                       <li>Top Freelancer</li>
-                      <li>Viirtual Assistant</li>
+                      <li>Virtual Assistant</li>
                       <li>Moneymagenet</li>
                     </ul>       
                 </div>
