modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -65,13 +65,29 @@
             </div>
     </section>
 
+
+    <!--other-users sections start from here-->
     <section class="other-users">
         <p>Discover People <span>See all</span></p>
-        <div>
-            <img src="" alt="IG-User-Icon">
-            <h1>IG-User</h1>
-            <P>Lorem ipsum dolor</P>
-            <button>Follow</button>
+        <div id="cards">
+            <div id="user-card">
+                <img src="" alt="IG-User-Icon">
+                <h1>IG-User</h1>
+                <P>Lorem ipsum dolor</P>
+                <button>Follow</button>
+            </div>
+            <div id="user-card">
+                <img src="" alt="IG-User-Icon">
+                <h1>IG-User</h1>
+                <P>Lorem ipsum dolor</P>
+                <button>Follow</button>
+            </div>
+            <div id="user-card">
+                <img src="" alt="IG-User-Icon">
+                <h1>IG-User</h1>
+                <P>Lorem ipsum dolor</P>
+                <button>Follow</button>
+            </div>
         </div>
     </section>
     <section></section>
