new file:   images/users/1.webp    new file:   images/users/2.jpg 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
         <p>Discover People <span>See all</span></p>
         <div id="cards">
             <div id="user-card">
-                <img src="" alt="IG-User-Icon">
+                <img src="images/users/1.webp" alt="IG-User-Icon">
                 <h1>IG-User</h1>
                 <P>Lorem ipsum dolor</P>
                 <button>Follow</button>
             </div>
             <div id="user-card">
-                <img src="" alt="IG-User-Icon">
+                <img src="images/users/2.jpg" alt="IG-User-Icon">
                 <h1>IG-User</h1>
                 <P>Lorem ipsum dolor</P>
                 <button>Follow</button>
