--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
             <div id="user-card">
                 <img src="images/users/1.webp" alt="IG-User-Icon">
                 <h1>IG-User</h1>
-                <P>Lorem ipsum dolor</P>
+                <P>Suggested for you</P>
                 <button>Follow</button>
             </div>
             <div id="user-card">
                 <img src="images/users/2.jpg" alt="IG-User-Icon">
                 <h1>IG-User</h1>
-                <P>Lorem ipsum dolor</P>
+                <P>Suggested for you</P>
                 <button>Follow</button>
             </div>
             <div id="user-card">
                 <img src="" alt="IG-User-Icon">
                 <h1>IG-User</h1>
-                <P>Lorem ipsum dolor</P>
+                <P>Suggested for you</P>
                 <button>Follow</button>
             </div>
         </div>
