new file:   images/Icons/menu (2).png 	new file:   images/Icons/menu.png 	new file:   images/users/3.jpg 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="header-name">hill.benedicta</div>
         <div class="icon">
             <img src="" alt="notification">
-            <img src="" alt="add-story">
-            <img src="" alt="menu-bar">
+            <img src="images/Icons/plus.png" alt="add-story">
+            <img src="images/Icons/menu (2).png" alt="menu-bar">
         </div> 
     </header>  
 
@@ -57,7 +57,7 @@
                     </ul>       
                 </div>
         
-                <div>
+                <div class="profile-action">
                     <button>Edit profit</button>
                     <button>Share profile</button>
                     <button></button>
@@ -83,7 +83,7 @@
                 <button>Follow</button>
             </div>
             <div id="user-card">
-                <img src="" alt="IG-User-Icon">
+                <img src="images/users/3.jpg" alt="IG-User-Icon">
                 <h1>IG-User</h1>
                 <P>Suggested for you</P>
                 <button>Follow</button>
