modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div class="icon">
             <img src="" alt="notification">
             <img src="images/Icons/plus.png" alt="add-story">
-            <img src="images/Icons/menu (2).png" alt="menu-bar">
+            <img src="images/Icons/menu.png" alt="menu-bar">
         </div> 
     </header>  
 
-    <section>
+    <section class="hero-profile">
             <div class="image-stats">
                   <div class="profile-image">
                     <img  class="profile-image" src="images/WhatsApp Image 2024-08-08 at 06.30.13_38d0fb96.jpg" alt="profileimage">
