new file:   images/Icons/add user.png 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="profile-action">
                     <button>Edit profit</button>
                     <button>Share profile</button>
-                    <button id="add-user"></button>
+                    <button id="add-user"><img src="images/Icons/add user.png" alt="add user"></button>
                 </div>                  
             </div>
     </section>
