new file:   images/Icons/threads.png 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="header-name">hill.benedicta</div>
         <div class="icon">
-            <img src="" alt="notification">
+            <img src="images/Icons/threads.png" alt="notification">
             <img src="images/Icons/plus.png" alt="add-story">
             <img src="images/Icons/menu.png" alt="menu-bar">
         </div> 
