modified:   index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <main>
     <header>
-        <div class="header-name">hill.benedicta</div>
+        <div class="header-name">hills.benedicta</div>
         <div class="icon">
             <img src="images/Icons/threads.png" alt="notification">
             <img src="images/Icons/plus.png" alt="add-story">
