new file:   images/users/4.jpg 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -88,10 +88,29 @@
                 <P>Suggested for you</P>
                 <button>Follow</button>
             </div>
+            <div id="user-card">
+                <img src="images/users/4.jpg" alt="IG-User-Icon">
+                <h1>IG-User</h1>
+                <P>Suggested for you</P>
+                <button>Follow</button>
+            </div>
         </div>
     </section>
-    <section></section>
-    <footer></footer>
+
+    <section>
+        <div>
+
+        </div>
+        <h4>Capture the moment with a friend</h4>
+        <p>Create your first post</p>
+    </section>
+
+    <footer>
+        <img src="images/Icons/home.png" alt="home-nav">
+        <img src="images/Icons/search.png" alt="search-nav">
+        <img src="images/Icons/plus.png" alt="add-nav">
+        <img src="images/Icons/play.png" alt="profile-nav">
+    </footer>
 
 </main>   
                                                                           
