modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
         <img src="images/Icons/home.png" alt="home-nav">
         <img src="images/Icons/search.png" alt="search-nav">
         <img src="images/Icons/plus.png" alt="add-nav">
-        <img src="images/Icons/play.png" alt="profile-nav">
+        <img src="images/Icons/play.png" alt="reels-nav">
+        <img src="" alt="profile-nav">
     </footer>
 
 </main>   
