--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram.com</title>
-
+    <link rel="icon" type="image/x-icon" href="images/Icons/Instagram_icon.png.webp">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
