--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
         </div>
     </section>
 
-    <section>
-        <div>
-
+    <section class="user-feeds">
+        <div class="feed-nav">
+            <img id="feed-post" src="images/Icons/1142014.png" alt="grid-feed">
+            <img src="images/Icons/story.png" alt="users-feed">
         </div>
         <h4>Capture the moment with a friend</h4>
         <p>Create your first post</p>
