modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -94,12 +94,15 @@
 
     <section class="user-feeds">
         <div class="feed-nav">
-            <img id="feed-post" src="images/Icons/1142014.png" alt="grid-feed">
+            <img  src="images/Icons/1142014.png" alt="grid-feed">
             <img src="images/Icons/story.png" alt="users-feed">
         </div>
-        <h4>Capture the moment with a friend</h4>
-        <p>Create your first post</p>
-        <h6>Your photos and videos posts will appear here when you start creating one</h6>
+        <div id="feed-post"></div>
+        <div class="news-feed">
+            <h4>Capture the moment with a friend</h4>
+            <p>Create your first post</p>
+            <h6>Your photos and videos posts will appear here when you start creating one</h6>
+        </div>
     </section>
 
     <footer>
