--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="profile-bio">
                     <p class="profile-user-name">benedicta hills</p> 
                     <div class="profile-tag">
-                        <p><img class="threads-link" src="images/Icons/threads.png" alt="thread">hills.benedicta</p> 
+                        <p><img class="threads-link" src="images/Icons/threads.png" alt="thread"git>hills.benedicta</p> 
                     </div>             
         
                     <ul>
